Comitting final changes before submission deadline 1. Fixed the alignment of elements within the divs in the TopBar component. 2. Cleaned code a bit. 3. Went through the entire list in Idead_Practica to make sure I included and achieved what I wanted with this excercise.

--- a/VSA.css
+++ b/VSA.css
@@ -10,7 +10,7 @@ Declaring variables to be my primary color palette in VSA website.
   --font-color-secondary-background: #000000;
   /* As we saw in class we declare a few options in case the user's browser doesn't support the first one. */
   --primary-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  /* Using the best practices values and  */
+  /* Using the best practices values and*/
   --font-size-small: 0.8rem;
   --font-size-regular: 1rem;
   --font-size-large: 1.5rem;
@@ -84,6 +84,20 @@ header {
 
 #ButtonContainer {
   flex: 0.5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* button {
+  background-color: var(--primary-color);
+  fon
+} */
+
+#TopBarTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 /*
